force-app/main/default/objects/nPortal__Field_Extension__c/nPortal__Field_Extension__c.object-meta.xml
<CustomObject>
    <description>--DEPRECATED-- Extends a field for the given object. Optionally tied to Routes.</description>
    <label>-D Field Extension</label>
    <nameField>
        <displayFormat>FX{0000}</displayFormat>
        <label>Field Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>-D Field Extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>