force-app/main/default/objects/nPortal__Field_Extension__c/fields/nPortal__Alternate_Label__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Alternate_Label__c</fullName>
    <description>Replacement label text or a question referencing the extended field.</description>
    <label>Alternate Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>