force-app/main/default/objects/nPortal__Field_Extension__c/fields/nPortal__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Field_Name__c</fullName>
    <description>The name of the field being extended.</description>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>