force-app/main/default/objects/nPortal__Field_Extension__c/fields/nPortal__Format_Description__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Format_Description__c</fullName>
    <description>A description of the logic applied in the format expression to aid in understanding what input is accepted.</description>
    <inlineHelpText>Describe the format expression used to indicate what types of inputs are acceptable.</inlineHelpText>
    <label>Format Rule Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>