force-app/main/default/objects/nPortal__Field_Extension__c/fields/nPortal__Format_Message__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Format_Message__c</fullName>
    <description>The error message to display to the user when a field does not match the format expression specified.</description>
    <inlineHelpText>Enter a message to display to the user when their input does not match the format specified in Format Expression.</inlineHelpText>
    <label>Format Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>