force-app/main/default/objects/nPortal__Field_Extension__c/fields/nPortal__Route__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a Route. If none is specified the field extension can be applied everywhere.</description>
    <inlineHelpText>Specify the Route that this field extension will apply to, otherwise the field extension will be applied everywhere.</inlineHelpText>
    <label>Route</label>
    <referenceTo>nFORCE__Route__c</referenceTo>
    <relationshipLabel>Field Extension Route</relationshipLabel>
    <relationshipName>Field_Ext_Route</relationshipName>
    <type>Lookup</type>
</CustomField>