force-app/main/default/objects/nPortal__Field_Extension__c/fields/nPortal__SLDS_Column_Size__c.field-meta.xml
<CustomField>
    <fullName>nPortal__SLDS_Column_Size__c</fullName>
    <description>The size of the column used for this field in the SLDS Grid. This number is the denominator of the fraction 1/x that gives the percentage of the row the field&apos;s column will span.</description>
    <inlineHelpText>Specify the size of the SLDS Grid column this field should span. This number will be divided into 1 to give the percentage of the row the field will span. For example, a value of 3 will equate to 33.333% of the row.</inlineHelpText>
    <label>SLDS Grid Column Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>