force-app/main/default/objects/nPortal__Field_Extension__c/fields/nPortal__sObject_Name__c.field-meta.xml
<CustomField>
    <fullName>nPortal__sObject_Name__c</fullName>
    <description>The object to which an extended field belongs.</description>
    <label>sObject Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>