force-app/main/default/objects/nPortal__Field_Extension__c/fields/nPortal__Tooltip_Contents__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Tooltip_Contents__c</fullName>
    <description>Contents of a tooltip displayed on Customer Portal after expanding the tooltip text</description>
    <label>Tooltip Contents</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>