force-app/main/default/objects/nPortal__Field_Extension__c/fields/nPortal__Tooltip_Enabled__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Tooltip_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether or not a tooltip will be displayed for the given field in Customer Portal.</description>
    <inlineHelpText>Check this field to enable a tooltip for the given field in Customer Portal.</inlineHelpText>
    <label>Tooltip Enabled</label>
    <type>Checkbox</type>
</CustomField>