force-app/main/default/objects/nPortal__Field_Extension__c/fields/nPortal__Tooltip_Text__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Tooltip_Text__c</fullName>
    <description>Custom help text displayed on Customer Portal for a particular field.</description>
    <label>Tooltip Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>